Implement support for post-mortem ("Auto-Execute") debugging. When a user-mode application crashes, and if AE-debugging is enabled in the registry (via the "AeDebug" registry key), the user is offered to either close the application or attach a debugger. If (s)he chooses the latter, then a debugger is spawned and attaches to the application, allowing the user to (back)trace to the source of the problem. Another use is to take automatic crash dumps with external tools (an infamous example on Windows being "Dr Watson").
See for example http://www.debuginfo.com/articles/ntsdwatson.html for more information.
- blocks
-
CORE-8269 Implement crash triage and automatic reporting functionally
-
- Open
-