[KERNEL32]: Implement support for Auto-Execute (AE) Debugging: starting a user-specified debugger (e.g., DrWatson on Windows, etc...) which attaches to a user-mode application when the latter crashes. CORE-11508 #resolve

svn path=/trunk/; revision=71794